z-index fix for menu during photobox overlay.

--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ header {
 #menuCont ul li {
 	position: relative;
 	display: inline;
-	z-index:57575757;
+	z-index:100;
 }
 
 #menuCont ul li a {
